Change History
==============

1.6.0b4
-------

- Update all schemas to use message factory instead of _msgid. Now it is
  i18ndude compatible, so you can use rebuild pot script.
  [toutpt]

- Clean up quick edit visuals; make the drag and drop look like Plone 4.
  [stevem]

- Quick Edit reload after delete or other change wasn't working (at least in
  firefox) as the browser wasn't reloading if there was a hash tag.
  [stevem]

- Fix FormSaveDataAdapter to transparently
  migrate storage to LOBTree introduced in 1.6.0b4
  This closes http://plone.org/products/ploneformgen/issues/295 
  [hplocher]

- Updated exportimport to use five.formlib. 
  [vangheem]

- Add form tracking plugin for collective.googleanalytics. (Matt Yoder)

- Switch to using a hash rather than a query string for indicating
  quick edit mode. More stable since the browser doesn't care.
  (Steve McMahon)

- fieldset.py: fixed missing import 

- action adapter interface: fix indention
  [seletz]
  
1.6.0b3
-------

- Add infrastructure for upgrade steps. (David Glick)

- Form prologues and epilogues weren't showing for anon users.
  Thanks, Ricardo! (Steve)

- Fix styling of quick edit for P4; also header injection. (Steve)

- Fix preferences panel. (Steve McMahon)

- Make sure the non-default profiles don't show up when creating a new site in
  Plone 4. (David Glick)

- Use an LOBTree to store results in the saved data adapter when available
  (i.e. with ZODB>=3.8.x), allowing us to stop keeping track of the result
  count in the _inputItems attribute, thereby greatly reducing the number of
  write conflicts under load. (David Glick)


1.6.0b2
-------

- Adjust ScriptableFields version requirements.

1.6.0b1
-------

 - Accept Canadian postal codes with lowercase letters. (David Glick)

 - Fix issue where the saved data adapter did not save data when using an
   embedded form whose action on success is to traverse to another page.
   (Thomas Buchberger, David Glick)

 - Plone 4 Compatibility.
